--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,5 @@ config = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "*"
 common = { path = "../common" }
+log = "*"
+log4rs = "*"
