--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,5 +9,6 @@ config = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "*"
 common = { path = "../common" }
-log = "*"
-log4rs = "*"
+log = "0.4.0"
+env_logger = "0.7.1"
+sysfs_gpio = "0.5"
