--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,7 @@
 [target.armv7-unknown-linux-musleabihf]
 linker = "arm-linux-gnueabihf-ld"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
