--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,5 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 bincode = "*"
 common = { path = "../common" }
 log = "0.4.0"
-env_logger = "0.7.1"
 sysfs_gpio = "0.5"
+log4rs = "0.9.0"
+signal-hook = "0.1.12"
+log-panics = "2.0.0"
