--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,18 +6,19 @@ edition = "2018"
 
 [dependencies]
 common = { path = "../common" }
-web-view = "*"
+web-view = "0.5.4"
 hidapi = "1.0.1"
 config = "0.9"
 serde = { version = "1.0", features = ["derive"] }
-bincode = "*"
+bincode = "1.2.0"
 log = "0.4.0"
 env_logger = "0.7.1"
-piston = "*"
-piston_window = "*"
+piston = "0.49.0"
+piston_window = "0.105.0"
 gilrs = "0.7.2"
-gfx_device_gl = "*"
-piston2d-gfx_graphics = "*"
-image = "*"
-piston-texture = "*"
-gfx = "*"
+gfx_device_gl = "0.16.2"
+piston2d-gfx_graphics = "0.66.0"
+image = "0.22.3"
+piston-texture = "0.8.0"
+gfx = "0.18.2"
+vecmath = "*"
