--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,3 +17,6 @@ piston_window = "0.105.0"
 gilrs = "0.7.2"
 image = "0.22.3"
 twoway = "0.2.1"
+gfx_device_gl = "0.16.2"
+find_folder = "*"
+toml = "0.5"
