--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
-members = ["server", "client", "common"]
-default-members = ["client"]
+members = ["src/server", "src/client", "src/common"]
+default-members = ["src/client"]
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
