--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -12,7 +12,7 @@ bincode = "1.2.0"
 log = "0.4.0"
 env_logger = "0.7.1"
 gilrs = "0.7.4"
-image = "0.22.3"
+image = "0.23.4"
 twoway = "0.2.1"
 find_folder = "*"
 toml = "0.5"
@@ -20,3 +20,5 @@ hidapi = "1.0.1"
 gfx_device_gl = "0.16.2"
 piston = "0.49.0"
 piston_window = "0.105.0"
+druid = { git = "https://github.com/xi-editor/druid.git", version = "*", features=["image"]}
+simple_logger = "1.6.0"
