--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -20,5 +20,7 @@ hidapi = "1.0.1"
 gfx_device_gl = "0.16.2"
 piston = "0.49.0"
 piston_window = "0.105.0"
-druid = { git = "https://github.com/xi-editor/druid.git", version = "*", features=["image"]}
+druid = { git = "https://github.com/xi-editor/druid.git", version = "*", features=["image", "svg", "im"]}
 simple_logger = "1.6.0"
+druid-shell = "0.5.0"
+piet-common = "0.1.1"
