--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -16,11 +16,9 @@ image = "0.23.4"
 twoway = "0.2.1"
 find_folder = "*"
 toml = "0.5"
-hidapi = "1.0.1"
-gfx_device_gl = "0.16.2"
-piston = "0.49.0"
-piston_window = "0.105.0"
-druid = { git = "https://github.com/xi-editor/druid.git", version = "*", features=["image", "svg", "im"]}
+druid = { version = "0.6.0", features=["image",  "im"]}
 simple_logger = "1.6.0"
-druid-shell = "0.5.0"
-piet-common = "0.1.1"
+druid-shell = "0.6.0"
+js-sys = "0.3.40"
+wasm-bindgen = "0.2.63"
+console_error_panic_hook = "0.1.6"
