--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -14,3 +14,5 @@ log4rs = "0.9.0"
 signal-hook = "0.1.12"
 log-panics = "2.0.0"
 rscam = { version = "0.5.5", features = ["no_wrapper"] }
+simple-error = "0.2.1"
+rand = "0.7.3"
