--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["Serhii Babak <mermoldy@gmail.com>"]
 [dependencies]
 config = "0.9"
 serde = { version = "1.0", features = ["derive"] }
+bincode = "1.2.0"
+log = "0.4.0"
+simple-error = "0.2.1"
