--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -16,3 +16,4 @@ log-panics = "2.0.0"
 rscam = { version = "0.5.5", features = ["no_wrapper"] }
 simple-error = "0.2.1"
 rand = "0.7.3"
+chrono = "0.4.15"
