--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [workspace]
 members = ["src/server", "src/client", "src/common"]
-exclude = ["src/hello_web"]
 default-members = ["src/client"]
 
 [profile.release]
 opt-level = 3
-# lto = true
+lto = true
 codegen-units = 1
